syntax = "proto3";

package Corona;
option csharp_namespace = "CovidSafe.Entities.v20200415.Protos";

// Phone -> Server;
// Get list of messages queued for a region since last query time
message MessageListRequest {
  Region region = 1;
  int64 last_query_time = 2;
}

// Server -> Phone; list of messages for region;
// as_of tells a client the current server time to enable clock synchronization
message MessageListResponse {
  repeated MessageInfo message_info = 1;
  int64 max_response_timestamp = 2;
}

// Phone -> Server GetMessages(new_message_ids)
// Request to download the details of given query ids
message MessageRequest { repeated MessageInfo requested_queries = 1; }

// Server -> Phone (list of messages corresponding to touch points where
// infection can occour)
message MatchMessage {
  // Not used at the moment.  Will eventually express a boolean relationship between
  // elements in the area_match and bluetooth_match collections
  string bool_expression = 1;
  // at or around <place[]> for more than <duration> around <time[]>
  repeated AreaMatch area_matches = 2;
  // near <person>; where person is identified by some kind of blue tooth beacon
  repeated BluetoothMatch bluetooth_matches = 3;
}

// Phone <-> Server;
// 2 known uses
// 1) Register a new announcement of area of interest
// 2) Part of MatchMessage which aggregates AreaMatches and BluetoothMatches
message AreaMatch {
  // Message to be displayed to the user if there is a match
  string user_message = 1;
  // Areas of interest
  repeated Area areas = 2;
}

// Phone -> Server;
// Message to self-register a phone as infected
message SelfReportRequest {
  // Anonymized blue tooth beacons (or other exact match identifiers if
  // available)
  repeated BlueToothSeed seeds = 1;
  // Coarse region that this request applies to specified
  // to maximum allowed privacy preserving precision
  Region region = 2;
}

// Server -> Phone
// Generic response to requests that don't have any other response.
// Contains status that details success (0) or failure (>0)
// and has message that details the failure.
message Status {
  int32 status_code = 1;
  string status_message = 2;
}

// Represents a geographic region quantized by precision of lat/long
message Region {
  double latitude_prefix = 1;
  double longitude_prefix = 2;
  // Mantissa mask.  Number of bits of Mantissa that should be preserved
  int32 precision = 3;
}

// Metadata about each query
message MessageInfo {
  string message_id = 1;
  int64 message_timestamp = 2;
}

// List of blue tooth beacons
message BluetoothMatch {
  // bluetooth_query Message to be displayed to the user if there is a match
  string user_message = 1;
  // Anonymized blue tooth beacons (or other exact match identifiers if
  // available)
  repeated BlueToothSeed seeds = 2;
}

message BlueToothSeed{
  string seed = 1;
  int64 sequence_start_time = 2;
  int64 sequence_end_time = 3;
}

message Area {
  Location location = 1;
  float radius_meters = 2;
  int64 begin_time = 3;
  int64 end_time = 4;
}

message Location {
  double latitude = 1;
  double longitude = 2;
}